apps/gravity/gravity-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gravity
  namespace: gravity
spec:
  serviceName: etcd
  selector:
    matchLabels:
      app: gravity
  updateStrategy:
    type: RollingUpdate
  replicas: 3
  template:
    metadata:
      labels:
        app: gravity
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: gravity
      containers:
      - name: etcd
        image: quay.io/coreos/etcd:v3.5.15
        ports:
        - containerPort: 2379
          name: client
        - containerPort: 2380
          name: peer
        volumeMounts:
        - name: data
          mountPath: /etcd
        livenessProbe:
          httpGet:
            path: /livez
            port: 2379
        readinessProbe:
          httpGet:
            path: /readyz
            port: 2379
        resources:
          requests:
            memory: 60Mi
            cpu: "10m"
          limits:
            memory: 60Mi
      - name: gravity
        image: ghcr.io/beryju/gravity:v0.9.0
        ports:
        - containerPort: 53
          name: dns
          protocol: UDP
        - containerPort: 53
          name: dnstcp
          protocol: TCP
        - containerPort: 8008
          name: http
          protocol: TCP
        - containerPort: 8009
          name: http-metrics
          protocol: TCP
        - containerPort: 67
          name: dhcp
          protocol: TCP
        - containerPort: 68
          name: dhcp-alt
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz/live
            port: http-metrics
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: http-metrics
        resources:
          requests:
            memory: 80Mi
            cpu: "5m"
          limits:
            memory: 80Mi
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
      storageClassName: "longhorn"
