apps/gravity/gravity-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gravity
  namespace: gravity
spec:
  selector:
    matchLabels:
      app: gravity
  replicas: 3
  template:
    metadata:
      labels:
        app: gravity
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: gravity
      containers:
      - name: gravity
        image: ghcr.io/beryju/gravity:v0.19.0
        ports:
        - containerPort: 53
          name: dns
          protocol: UDP
        - containerPort: 53
          name: dnstcp
          protocol: TCP
        - containerPort: 8008
          name: http
          protocol: TCP
        - containerPort: 8009
          name: http-metrics
          protocol: TCP
        - containerPort: 67
          name: dhcp
          protocol: TCP
        - containerPort: 68
          name: dhcp-alt
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz/live
            port: http-metrics
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: http-metrics
        resources:
          requests:
            memory: 200Mi
            cpu: "5m"
          limits:
            memory: 200Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        volumeMounts:
          - mountPath: /data
            name: tmp
            subPath: data
          - mountPath: /var/run
            name: tmp
            subPath: run
      volumes:
      - emptyDir: {}
        name: tmp
