apps/gravity/gravity-etcd-service.yml
apiVersion: v1
kind: Service
metadata:
  name: etcd
  namespace: gravity
  labels:
    app: gravity
spec:
  selector:
    app: gravity
  ports:
  - protocol: TCP
    port: 2379
    targetPort: 2379
    name: etcd-client
  - protocol: TCP
    port: 2380
    targetPort: 2380
    name: etcd-peer
  type: ClusterIP
  clusterIP: None
