apps/gravity/gravity-http-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gravity-http
  namespace: gravity
  labels:
    app: gravity
    metrics: gravity
spec:
  selector:
    app: gravity
  ports:
  - protocol: TCP
    port: 8008
    targetPort: 8008
    name: http
  - protocol: TCP
    port: 8009
    targetPort: 8009
    name: http-metrics
  type: ClusterIP
