apps/gravity/gravity-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gravity
  namespace: gravity
  labels:
    app: gravity
spec:
  selector:
    app: gravity
  ports:
  - protocol: UDP
    port: 53
    targetPort: 53
    name: dns
  - protocol: TCP
    port: 53
    targetPort: 53
    name: dns-tcp
  type: LoadBalancer
  loadBalancerIP: 192.168.77.53
  externalTrafficPolicy: Cluster
