apps/gravity/gravity-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gravity
  namespace: gravity
spec:
  ingressClassName: nginx
  rules:
  - host: gravity.mgmt.sholdee.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: gravity-http
              port:
                name: http
